test/corpus/distinct.txt
==================
Return Distinct Literal
==================

return distinct 1

---

(source_file
    (return_operation
    (kw_return
        (keyword_operation))
    (keyword_distinct)
    (expression
        (member_expression
        (literal
            (number))))))

==================
Return Distinct Object
==================

return distinct { data: "test" }

---

(source_file
    (return_operation
    (kw_return
        (keyword_operation))
    (keyword_distinct)
    (expression
        (member_expression
        (object
            (object_pair
            (property_identifier)
            (expression
                (member_expression
                (literal
                    (string
                    (string_fragment)))))))))))

==================
Return Distinct Document
==================

for doc in collection
    return distinct doc

---

(source_file
    (query
    (for_operation
        (kw_for
        (keyword_operation))
        (identifier)
        (kw_in
        (keyword_operator))
        (collection_selector
        (collection_name
            (identifier))))
    (return_operation
        (kw_return
        (keyword_operation))
        (keyword_distinct)
        (expression
        (member_expression
            (identifier))))))
