test/corpus/statements.txt
==================
Filter statements
==================

for doc in collection
    filter doc.name == "test"
    return doc

---

(source_file
    (query
    (for_operation
        (kw_for
        (keyword_operation))
        (identifier)
          (kw_in
            (keyword_operator))
          (collection_selector
            (collection_name
              (identifier))))
        (filter_operation
          (kw_filter
            (keyword_operation))
          (comparison_expression
            (expression
              (member_expression
                (member_expression
                  (identifier))
                (identifier)))
            (comparison_operator)
            (expression
              (member_expression
                (literal
                  (string
                    (string_fragment)))))))
        (return_operation
          (kw_return
            (keyword_operation))
          (expression
            (member_expression
              (identifier))))))
